--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,18 +20,18 @@
 				<!-- Menu principal -->
 				<nav class="main-menu">
 				  <ul>
-					<li><a href="contact.html">اتصل بنا</a></li>
-					<li><a href="about.html">عن رألعاب</a></li>
+					<li><a href="/contact">اتصل بنا</a></li>
+					<li><a href="/about">عن رألعاب</a></li>
 					
 				
 				
-					<li><a href="learn.html">تعلّم عن السكري</a></li>
+					<li><a href="/learn">تعلّم عن السكري</a></li>
 					<li><a href="#">الألعاب</a>
 						<ul class="sub-menu">
-						  <li><a href="sugar-catch.html">صيد السكر</a></li>
-						  <li><a href="glucose-race.html">سباق الجلوكوز</a></li>
-						  <li><a href="health-maze.html">المتاهة الصحية</a></li>
-						  <li><a href="sugar-challenge.html">تحدي السكر</a></li>
+						  <li><a href="/sugar-catch">صيد السكر</a></li>
+						  <li><a href="/bike-race">سباق الجلوكوز</a></li>
+						  <li><a href="/sugar-guess">تحدي قياس السكر</a></li>
+						  <li><a href="/maze">المتاهة الصحية</a></li>
 						</ul>
 					  </li>
 					<li class="current-list-item"><a href="#">الرئيسية</a></li>
@@ -110,12 +110,12 @@
 				<h2 class="widget-title" style="font-family: 'Comic Sans MS', cursive, sans-serif; font-size: 24px; color: #FF6F61;">روابط سريعة</h2>
 				<ul style="list-style: none; padding: 0;">
 				  <li><a href="index.html" style="font-family: 'Comic Sans MS', cursive, sans-serif; font-size: 16px; color: #555; text-decoration: none; transition: color 0.3s ease;">الرئيسية</a></li>
-				  <li><a href="about.html" style="font-family: 'Comic Sans MS', cursive, sans-serif; font-size: 16px; color: #555; text-decoration: none; transition: color 0.3s ease;">من نحن</a></li>
+				  <li><a href="/about" style="font-family: 'Comic Sans MS', cursive, sans-serif; font-size: 16px; color: #555; text-decoration: none; transition: color 0.3s ease;">من نحن</a></li>
 				  <li><a href="games.html" style="font-family: 'Comic Sans MS', cursive, sans-serif; font-size: 16px; color: #555; text-decoration: none; transition: color 0.3s ease;">الألعاب</a></li>
-				  <li><a href="learn.html" style="font-family: 'Comic Sans MS', cursive, sans-serif; font-size: 16px; color: #555; text-decoration: none; transition: color 0.3s ease;">تعلّم عن السكري</a></li>
-				  <li><a href="contact.html" style="font-family: 'Comic Sans MS', cursive, sans-serif; font-size: 16px; color: #555; text-decoration: none; transition: color 0.3s ease;">اتصل بنا</a></li>
+				  <li><a href="/learn" style="font-family: 'Comic Sans MS', cursive, sans-serif; font-size: 16px; color: #555; text-decoration: none; transition: color 0.3s ease;">تعلّم عن السكري</a></li>
+				  <li><a href="/contact" style="font-family: 'Comic Sans MS', cursive, sans-serif; font-size: 16px; color: #555; text-decoration: none; transition: color 0.3s ease;">اتصل بنا</a></li>
 				</ul>
-			  </div>
+			  </div> 
 			</div>
 	  
 			<!-- Newsletter -->
