--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 				<!-- Logo -->
 				<div class="site-logo">
 				  <a href="index.html">
-					<img src="assets/img/diabetes-logo.png" alt="رألعاب السكري" style="height: 70px;"> <!-- Logo adapté au thème du diabète -->
+					<img src="assets/img/logo.png" alt="رألعاب السكري" style="height: 70px;"> <!-- Logo adapté au thème du diabète -->
 				  </a>
 				</div>
 				<!-- Fin du logo -->
@@ -88,7 +88,7 @@
 			  <div class="footer-box about-widget">
 				<h2 class="widget-title" style="font-family: 'Comic Sans MS', cursive, sans-serif; font-size: 24px; color: #FF6F61;">من نحن</h2>
 				<p style="font-family: 'Comic Sans MS', cursive, sans-serif; font-size: 16px; color: #555;">
-				  رألعاب هي منصة تعليمية تفاعلية للأطفال لتوعيتهم بمرض السكري بطريقة ممتعة وسهلة. نهدف إلى جعل التعلم تجربة مليئة بالمرح والفائدة.
+					سُكّا هي منصة تعليمية تفاعلية للأطفال لتوعيتهم بمرض السكري بطريقة ممتعة وسهلة. نهدف إلى جعل التعلم تجربة مليئة بالمرح والفائدة.
 				</p>
 			  </div>
 			</div>
