--- a/src/app/bike-race/bike-race.component.html
+++ b/src/app/bike-race/bike-race.component.html
@@ -1,9 +1,9 @@
-<div class="breadcrumb-section breadcrumb-bg" style="z-index: revert; background: linear-gradient(293.2deg, #1266D6 15.63%, #0D50A8 91.91%);">
+<div class="breadcrumb-section breadcrumb-bg" style="z-index: revert;background: linear-gradient(293.2deg, #77b0fb 15.63%, #0D50A8 91.91%);">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 offset-lg-2 text-center">
         <div class="breadcrumb-text">
-          <h1 style="color: white; font-size: 2.5rem;">تحدي قياس السكر</h1>
+          <h1 style="color: white; font-size: 2.5rem;">سباق الدراجات التفاعلي</h1>
           <p style="color: #FFA500; font-size: 1.2rem;">لعبة تعليمية ممتعة للأطفال</p>  </div>
       </div>
     </div>
