--- a/src/app/food-calculator/food-calculator.component.html
+++ b/src/app/food-calculator/food-calculator.component.html
@@ -1,4 +1,4 @@
-<div class="breadcrumb-section breadcrumb-bg" style="z-index: revert; background: linear-gradient(293.2deg, #1266D6 15.63%, #0D50A8 91.91%);">
+<div class="breadcrumb-section breadcrumb-bg" style="z-index: revert;background: linear-gradient(293.2deg, #77b0fb 15.63%, #0D50A8 91.91%);">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 offset-lg-2 text-center">
@@ -35,7 +35,9 @@
       <div class="col-lg-6">
         <div class="calculator-card">
           <!-- Barre de recherche -->
-          <div class="search-bar">
+          <div class="search-bar" style="
+          padding-top: 10px;
+      ">
             <i class="fas fa-search"></i>
             <input 
               type="text"  
