--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <!-- En-tête coloré -->
-<div class="breadcrumb-section breadcrumb-bg" style="z-index: revert; background: linear-gradient(293.2deg, #1266D6 15.63%, #0D50A8 91.91%);">
+<div class="breadcrumb-section breadcrumb-bg" style="z-index: revert;background: linear-gradient(293.2deg, #77b0fb 15.63%, #0D50A8 91.91%);">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 offset-lg-2 text-center">
