--- a/src/app/guess-sugar/guess-sugar.component.html
+++ b/src/app/guess-sugar/guess-sugar.component.html
@@ -1,18 +1,17 @@
-<div class="breadcrumb-section breadcrumb-bg" style="z-index: revert; background: linear-gradient(293.2deg, #1266D6 15.63%, #0D50A8 91.91%);">
+<div class="breadcrumb-section breadcrumb-bg" style="z-index: revert;background: linear-gradient(293.2deg, #77b0fb 15.63%, #0D50A8 91.91%);">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 offset-lg-2 text-center">
         <div class="breadcrumb-text">
-          <div class="" style="z-index: revert; background: linear-gradient(293.2deg, #1266D6 15.63%, #0D50A8 91.91%);">
             <div class="container">
               <div class="row">
                 <div class="col-lg-8 offset-lg-2 text-center">
                   <div class="breadcrumb-text">
                     <p style="color: #FFD700; font-size: 1.3rem; font-weight: bold; text-shadow: 0 2px 4px rgba(0,0,0,0.3);">العب وتعلم</p>
-                    <h1 style="color: white; font-size: 2.5rem; margin-top: 10px; text-shadow: 0 4px 8px rgba(0,0,0,0.2); font-family: 'Tajawal', sans-serif;">سباق الدراجات التفاعلي</h1>
+                    <h1 style="color: white; font-size: 2.5rem; margin-top: 10px; text-shadow: 0 4px 8px rgba(0,0,0,0.2); font-family: 'Tajawal', sans-serif;">تحدي قياس السكر</h1>
                   </div>
                 </div>
-              </div>
+              
             </div>
           </div></div>
       </div>
