--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -24,7 +24,7 @@
     </div>
     
     <img src="https://www.dinolingo.com/wp-content/uploads/2024/12/cloud-2.png" alt="Cloud" style="position: absolute; top: 20%; left: 10%; width: 100px; animation: float 6s ease-in-out infinite;">
-    <img src="https://www.dinolingo.com/wp-content/uploads/2024/12/cat-on-cloud.png" alt="Character" style="position: absolute; bottom: 50px; right: 100px; width: 150px; animation: bounce 2s ease-in-out infinite;">
+    <img  src="assets/img/singe.png" alt="Character" style="position: absolute; bottom: 50px; right: 100px; width: 150px; animation: bounce 2s ease-in-out infinite;">
 </div>
 
 <!-- Features Section - Improved -->
